feat: cleanup, also remove unnecessary conditionals for iris compat flags